# WordleGame

./: CMakeLists.txt  README.md  main.cpp
Game/: CMakeLists.txt  Cell.cpp  Cell.hpp  Game.cpp  Game.hpp  constants.hpp  functions.cpp  functions.hpp  main.cpp  test.cpp
Wordlist/: wordlist.cpp
WordsDB/: words.cpp
